# performance_modelisation

./: .codedocs  .gitignore  .gitignore~  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  build_project.sh  readme.md  test_gitlab.sh
src/: CMakeLists.txt  Student.c  mainapp.c  misc.c  tool_cacheLineSize.c  tool_cacheSize.c  tool_freq.c
src/PMU_research/libpfm4/: check_events.c  output
src/PMU_research/msr-tools_1-2/: msr_setup.sh  rdmpmc  rdpmc  rdpmc.c  wrmsr
src/PMU_research/uncore_pci/: monitormembw_pci.sh
src/benchmark_amx/: License.txt  README.md
src/benchmark_amx/bench_script/: bench_2_tiles.sh  bench_doublette.sh  bench_mix_AVX_MMX.sh  bench_one_socket.sh  bench_two_sockets.sh
src/benchmark_amx/graph_script/: graph_doublette.py  graph_one socket.py
src/benchmark_amx/src/: bench-amxtile-BF16.c
src/benchmark_dml_mem/: CMakeLists.txt  bm_misc.h  bm_parameters.cpp  dml_benchmark.cpp  dml_benchmark.h  dml_main.cpp  dml_misc.cpp  dml_misc.h  dml_parameters.cpp  dml_parameters.h  dmlmem_orig  jcompile_dml  readme.md  test.cpp
src/benchmark_keccak/: bench_keccakf_octo.cpp  bench_keccakf_quad.cpp  bench_keccakf_ref.cpp  bench_keccakf_tuned.cpp  readme.md
src/benchmark_kernel_generator/: CMakeLists.txt  kg.template.cpp  kg_executor.cpp  kg_executor.h  kg_generators.cpp  kg_generators.h  kg_main.cxx  kg_misc.cpp  kg_misc.h  kg_parameters.cpp  kg_parameters.h  kg_template_end.cpp  kg_template_frequency.cpp  kg_template_start.cpp  readme.md
src/benchmark_memory/: CMakeLists.txt  bm_benchmark.cpp  bm_benchmark.h  bm_main.cpp  bm_misc.cpp  bm_misc.h  bm_parameters.cpp  bm_parameters.h  dmlmem.cpp  dmlmemmpi.cpp  ezOptionParser.hpp
src/benchmark_memory/script/: benchmark_memory_graph.py  extract_mpi.sh  my_output  run_intel_mpi.sh  run_tests.sh
src/benchmark_multiply/: CMakeLists.txt  benchmark_multiply.cpp  benchmark_multiply_bencher.sh  bm_bench_version.cpp  bm_bench_version.h  bm_main.cpp  multiply_version.cpp  multiply_version.h  readme.md
src/benchmark_multiply/script/: bm_execute.sh  bm_omp_benchmark.sh  bm_omp_block_thread.sh  bm_omp_cpu_bind.sh
src/common/: CMakeLists.txt  misc.c  misc.cxx  misc.h
src/common/AnyOption/: CMakeLists.txt  anyoption.cpp  anyoption.h
src/tool_PMU/: monitormembw_pci.sh  pmu_fixed_function.sh  pmu_hpmc.sh  pmu_uncore.sh
src/tool_PMU/libpfm4/: check_events  showevtinfo
src/tool_PMU/msr-tools_1-2/: rdmsr  rdmsr.c  rdpmc  rdpmc.c  wrmsr  wrmsr.c
src/tool_PMU/uncore_pci/: pci_linux_driver.c
src/tool_freq/: CMakeLists.txt  assembly_generator.cpp  assembly_generator.h  tool_freq.cxx  tool_freq_executor.cpp  tool_freq_generators.cpp  tool_freq_generators.h  tool_freq_misc.cpp  tool_freq_misc.h  tool_freq_parameters.cpp  tool_freq_parameters.h  tool_freq_template_end.cpp  tool_freq_template_start.cpp
src/tool_grommet_advanced_platform_observer/: .gitignore
src/tool_grommet_advanced_platform_observer/monitor-app/: package.json
src/tool_hw_description/: CMakeLists.txt  hw_data.sh  hw_description.sh  hw_update.sh
src/tool_hw_description/code/: CMakeLists.txt  get_hw_has_turbo.cxx
src/tool_hw_description/script/: get_hw_core_phy.sh  get_hw_cpu_freq_base  get_hw_cpu_generation  get_hw_cpu_has_turbo  get_hw_cpu_has_turbo.sh  get_hw_cpu_name  get_hw_cpu_name.sh  get_hw_socket.sh  get_hw_threads  print_hw_description_variables.sh
src/tool_kernel_generator/: CMakeLists.txt  kg_executor.cpp  kg_executor.h  kg_generators.cpp  kg_generators.h  kg_main.cxx  kg_misc.cpp  kg_misc.h  kg_parameters.cpp  kg_parameters.h  kg_template_end.cpp  kg_template_frequency.cpp  kg_template_start.cpp
src/tool_kernel_generator/script/: #kg_sbatch.sh#  kg_bench_concurrent_kg.sh  kg_bench_dependency_depth.sh  kg_bench_mixed_width.sh  kg_bench_one_cpu_all_cores_first_cpu.sh  kg_bench_registres.sh  kg_distribution.py  kg_exe_scaling.sh  kg_graphical.sh  kg_run_slurm.sh  kg_sbatch.sh  kg_timeline.py  tool_freq_compile.sh  tool_freq_distribution.py  tool_freq_graphical.sh  tool_freq_parallel.sh  tool_freq_usage_example.sh
src/tool_monitor_memory_bandwidth/: CMakeLists.txt  monitormembw.c
src/tool_monitor_memory_bandwidth/script/: mmb_perf.sh
src/tool_monitoring_bandwidth/: #monitoring_bw_main.sh#  CMakeLists.txt  Fred.sh  Pipfile  code_annotation.cpp  code_annotation.h  code_annotation_fortran_wrapper.f90  format_log.py  format_log_pcm.py  fred_utils.sh  log  log_64gb  log_64gb_read  log_64gb_write  main.c  monitoring_bw_main.sh  smlog  smlogread  test.sh
src/tool_monitoring_node/: .gitignore  README.md  index.php
src/tool_oprofile/: CMakeLists.txt  OP_ORIG  OUT  OUT_OPANNOTATE_ASS  OUT_OPANNOTATE_ASS_DEBUG  multiply_debug  objdump_spe.cpp  op_analysis.sh  op_main.sh  op_merged.txt  op_merging  op_objdump.txt  op_parsing.cpp  op_start.sh  op_stop.sh  oprofile++.sh  perf.data.old  report_instructions.txt  report_summary.txt
src/tool_yamb/: CMakeLists.txt  yamb.sh  yamb_graph.py
test/: 1  CMakeLists.txt  check_turbo.c  huge_page.c  init_avx.cpp  multiply  multiply.c  multiply_KIJ  multiply_big  multiply_simple  multiply_var  out_report  perf.data  perf.data.old  swat.c  test_ma_lib.c  tool_cacheLineSize.c  tool_cacheSize.c
test/collectl-jobid-226517/: o184i140-20170913.tab
test/horner/: OBJ  horner1.cpp  horner1_long  horner1_small  horner_icc_yamb  op1.test  op2.test  op3.test  profile_dml_long.txt  profile_jean_long.txt
test/oprofile_IPC05_D1/: op_merged.txt  op_objdump.txt  report_instructions.txt  report_summary.txt
test/oprofile_IPC05_D16/: op_merged.txt  op_objdump.txt  report_instructions.txt  report_summary.txt
test/oprofile_IPC2_D1/: op_merged.txt  op_objdump.txt  report_instructions.txt  report_summary.txt
test/oprofile_IPC2_D8/: op_merged.txt  op_objdump.txt  report_instructions.txt  report_summary.txt
test/oprofile_dep_unroll1/: op_merged.txt  op_objdump.txt  report_instructions.txt  report_summary.txt
test/oprofile_dep_unroll2/: op_merged.txt  op_objdump.txt  report_instructions.txt  report_summary.txt
test/tool_monitor_memory_bandwidth/: CMakeLists.txt  MMB_READ  MMB_WRITE  monitormembw.c  utils.h
(+2344 files in other folders)
